--- a/JavaApplication3/src/view/Halaman_Utama.form
+++ b/JavaApplication3/src/view/Halaman_Utama.form
@@ -48,12 +48,18 @@
                   <Component id="BtnPelanggan" min="-2" pref="195" max="-2" attributes="0"/>
                   <Component id="BtnPetugas" alignment="0" min="-2" pref="195" max="-2" attributes="0"/>
               </Group>
-              <EmptySpace pref="10" max="32767" attributes="0"/>
               <Group type="103" groupAlignment="0" attributes="0">
-                  <Component id="BtnTempat" min="-2" pref="195" max="-2" attributes="0"/>
-                  <Component id="BtnPaket" min="-2" pref="195" max="-2" attributes="0"/>
+                  <Group type="102" attributes="0">
+                      <EmptySpace max="32767" attributes="0"/>
+                      <Component id="BtnTempat" min="-2" pref="195" max="-2" attributes="0"/>
+                      <EmptySpace pref="14" max="32767" attributes="0"/>
+                  </Group>
+                  <Group type="102" alignment="0" attributes="0">
+                      <EmptySpace max="-2" attributes="0"/>
+                      <Component id="BtnPaket" min="-2" pref="195" max="-2" attributes="0"/>
+                      <EmptySpace max="32767" attributes="0"/>
+                  </Group>
               </Group>
-              <EmptySpace max="32767" attributes="0"/>
           </Group>
           <Group type="102" alignment="1" attributes="0">
               <EmptySpace min="0" pref="0" max="32767" attributes="0"/>
@@ -102,6 +108,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Data Petugas"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnPetugasActionPerformed"/>
+      </Events>
     </Component>
     <Component class="javax.swing.JButton" name="BtnPaket">
       <Properties>
@@ -122,6 +131,9 @@
       <Properties>
         <Property name="text" type="java.lang.String" value="Data Tempat Wisata"/>
       </Properties>
+      <Events>
+        <EventHandler event="actionPerformed" listener="java.awt.event.ActionListener" parameters="java.awt.event.ActionEvent" handler="BtnTempatActionPerformed"/>
+      </Events>
     </Component>
   </SubComponents>
 </Form>
